<resources>
    <string name="app_name">2016 무제한 인공지능 가위바위보</string>
    <string name="point_name">AI 포인트 :</string>
    <string name="point_value">0</string>
    <string name="version">010-0000-0000   v0.0.0</string>
    <string name="mode">release</string>
    <string name="mode_test">development release</string>

    <integer name="BuyActivity">1</integer>
    <integer name="SPLASH_TIME_OUT">1200</integer>
    <string name="AI1">1개 구매\n(100원)</string>
    <string name="AI5">5개 구매\n(500원)</string>
    <string name="AI10">10개 구매\n(1000원)</string>
    <string name="AI50">50개 구매\n(5000원)</string>
    <string name="AI100">100개 구매\n(10000원)</string>
    <string name="AI500">500개 구매\n(50000원)</string>
    <string name="AI1000">1000개 구매\n(100000원)</string>
    <string name="AI2000">2000개 구매\n(200000원)</string>
    <string name="AI2500">2500개 구매\n(250000원)</string>
    <string name="AI3000">3000개 구매\n(300000원)</string>
</resources>
