<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wakira.ai.rockscissorspaper.BuyActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/buy_btnBuy1"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/AI1" />


            <Button
                android:id="@+id/buy_btnBuy5"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/AI5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/buy_btnBuy10"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/AI10" />


            <Button
                android:id="@+id/buy_btnBuy50"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/AI50" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/buy_btnBuy100"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/AI100" />


            <Button
                android:id="@+id/buy_btnBuy500"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/AI500" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/buy_btnBuy1000"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/AI1000" />


            <Button
                android:id="@+id/buy_btnBuy2000"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/AI2000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/buy_btnCancel"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="구매 취소" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
